# Agentic-Docker

./: .agent_active_session  .agent_sessions.json  .gitignore  ARCHITECTURE_AND_GUIDE.md  MANUAL_TESTING_GUIDE.md  README.md  debug_latency.py  debug_llm.py  debug_log_utf8.txt  debug_models.txt  debug_ollama_raw.txt  debug_output.txt  inspect_dspy.py  manual_test_multi_server.py  pyproject.toml  requirements.txt  test_multi_server.py  test_remote_k8s.py  verify_syntax_agent.py
agentic_docker/: agent.py  agent_module.py  cli.py  cli_backup.py  cli_helper.py  dspy_client.py  settings.py
agentic_docker/database/: agentic_docker.db  db.py
agentic_docker/k8s_tools/: __init__.py  k8s_base.py  k8s_config.py  k8s_list_nodes.py  k8s_list_pods.py  local_k8s_list_nodes.py  local_k8s_list_pods.py  remote_k8s_extended_tools.py  remote_k8s_service_tools.py  remote_k8s_tools.py
agentic_docker/llm/: __init__.py  ollama_client.py
agentic_docker/mcp/: client.py  k8s_server.py  local_k8s_server.py  remote_k8s_server.py  server.py
agentic_docker/tools/: __init__.py  chat_tool.py  docker_list.py  docker_run.py  docker_stop.py  registry.py
devops_agent/: __init__.py  agent.py  agent_module.py  api_server.py  cli.py  cli_helper.py  context_cache.py  dspy_client.py  launcher.py  pulse.py  regex_router.py  safety.py  settings.py
devops_agent/data/: intents.json  semantic_cache.json  synthetic_examples.json
devops_agent/database/: db.py  (+1 more)
tests/: test_agent_routing.py  test_command_chaining.py  test_error_analysis.py  test_k8s_tools.py  test_llm_parsing.py  test_registry.py  test_remote_k8s_deployments.py  test_remote_k8s_extended.py  test_routing_logic.py  test_settings.py
(+22 files in other folders)
